@@ -1,0 +1,11 @@
+List all packages owning a particular set of files
+
+Note: Normally, only one package will own a file. If multiple packages own the same file, it usually consitutes a problem, and should be reported.
+
+Syntax:
+  belongs <local-opts> filename
+<local-opts> is either of: 
+  -c, --category cat - only search in category cat
+  -f, --full-regex   - supplied query is a regex
+  -e, --earlyout     - stop when first match is found
+
