@@ -1,0 +1,3 @@
+Print full path to ebuild for a given package
+Syntax:
+  size pkgspec
